--- a/profile.html
+++ b/profile.html
@@ -362,8 +362,8 @@
                 <a href="index.html">CODE.</a>
         </div>
         <nav>
-                <a href="project.html"><img src="project.png" alt="Projects"></a>
-                <a href="profile.html" class="active"><img src="artist.png" alt="Artists"></a>
+                <a href="project.html"><img src="images/project.png" alt="Projects"></a>
+                <a href="profile.html" class="active"><img src="images/artist.png" alt="Artists"></a>
         </nav>
     </header>
 
@@ -462,7 +462,7 @@
                     card.classList.add('profile-card');
                     card.innerHTML = `
                         <div class="profile-image-wrapper">
-                            <img class="profile-image" src="${student.image}" alt="${student.name} 프로필 이미지">
+                            <img class="profile-image" src="images/${student.image}" alt="${student.name} 프로필 이미지">
                             </div>
                         <div class="profile-content">
                             <div class="profile-header">
